# Stark-Hacks-Submarine

./: .gitignore  README.md  pyproject.toml
Arduino/: IMU_control.ino  ctrl_io.ino  ctrl_io.py  ctrl_st.py  kb_test.ino  kb_test.py  kb_test_new.py  most_recent.ino  simple_test.ino  test_LED.py  test_led.ino
Arduino/GUI/: IMU_dashboard.py
Camera Control/: main.py
Camera Control/main/: main.ino
Camera Control/main.ino/: main.ino.ino
Drone Model/: main.py  pyproject.toml  rough_quadcopter.step  rough_quadcopter.stl
Model Compression/: convert_to_tflite.py  evaluate_quantized.py
NanoCrackSeg/: nano_crack_seg.py  prepare_datasets.py  train_student.py  train_student_pai.py  train_teacher_model.py  unet_model.py
NanoCrackSeq/: nano_crack_seq.py
PAI/: PAI_config.json
UNet Teacher Model/: count_parametes.py  extract_subset.py  prepare_datasets.py  train_teacher_model.ipynb  train_teacher_model.py  unet_model.py
pico-crack-segmentation-models-cpp-mcu-v3-impulse-#1/: README.txt
pico-crack-segmentation-models-cpp-mcu-v3-impulse-#1/model-parameters/: model_metadata.h  model_variables.h
pico-crack-segmentation-models-cpp-mcu-v3-impulse-#1/tflite-model/: tflite-resolver.h  tflite_learn_967008_6.h  tflite_learn_967008_6.tflite
results/student/: nano_crack_seg_1bit.tflite  nano_crack_seg_2bit.tflite  nano_crack_seg_4bit.tflite  nano_crack_seg_int8.pt  nano_crack_seg_int8.tflite  quantization_results.json
results/student_pai/: PAI_output.txt
