[project]
name = "starkhacks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = [
    "albumentations>=2.0.8",
    "inputs>=0.5",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "perforatedai>=3.2.0",
    "perforatedbp>=3.2.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
    "ti-kit-board-communication>=1.0.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "tensorflow>=2.18.0",
]
